--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Morero Intelligence Group | Data & AI Consulting</title>
+  <title>Morero Intelligence Group — Data & AI Consulting</title>
 
   <!-- TailwindCSS (CDN) -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -39,11 +39,13 @@
           <img src="morero-logo.png" alt="Morero Intelligence Group" class="w-9 h-9 object-contain" onerror="this.style.display='none'">
           <span class="font-bold text-lg tracking-tight">Morero Intelligence Group</span>
         </a>
+        <!-- Desktop nav -->
         <nav class="hidden md:flex items-center gap-6 text-sm">
           <a href="#services" class="hover:text-[var(--morero-blue)]">Services</a>
           <a href="#industries" class="hover:text-[var(--morero-blue)]">Industries</a>
           <a href="#tools" class="hover:text-[var(--morero-blue)]">Platforms & Tools</a>
           <a href="#demos" class="hover:text-[var(--morero-blue)]">Live Demos</a>
+          <a href="#careers" class="hover:text-[var(--morero-blue)]">Careers</a><!-- NEW -->
           <a href="#about" class="hover:text-[var(--morero-blue)]">About</a>
           <a href="#contact" class="btn btn-primary">Talk to Us</a>
         </nav>
@@ -52,12 +54,14 @@
         </button>
       </div>
     </div>
+    <!-- Mobile nav -->
     <div id="mobileNav" class="md:hidden hidden border-t border-slate-200">
       <div class="px-4 py-3 space-y-2 text-sm">
         <a href="#services" class="block">Services</a>
         <a href="#industries" class="block">Industries</a>
         <a href="#tools" class="block">Platforms & Tools</a>
         <a href="#demos" class="block">Live Demos</a>
+        <a href="#careers" class="block">Careers</a><!-- NEW -->
         <a href="#about" class="block">About</a>
         <a href="#contact" class="btn btn-primary w-full justify-center">Talk to Us</a>
       </div>
@@ -74,7 +78,7 @@
           We drive intelligence with purpose
         </span>
         <h1 class="mt-6 text-4xl sm:text-5xl font-extrabold leading-tight">Practical Data & AI for real business impact</h1>
-        <p class="mt-5 text-lg text-slate-200 max-w-2xl">We help Financial Services, Public Sector, Mining, Legal and Healthcare teams turn data into outcomes, from cloud data platforms to production AI assistants.</p>
+        <p class="mt-5 text-lg text-slate-200 max-w-2xl">We help Financial Services, Public Sector, Mining, Legal and Healthcare teams turn data into outcomes — from cloud data platforms to production AI assistants.</p>
         <div class="mt-8 flex flex-wrap gap-3">
           <a href="#contact" class="btn btn-primary">Book a discovery call</a>
           <a href="#demos" class="btn btn-ghost bg-white/10 text-white border-white/20">See live demos</a>
@@ -97,7 +101,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center mb-10">
         <h2 class="text-3xl font-bold">What we do</h2>
-        <p class="mt-3 text-slate-600 max-w-2xl mx-auto">End-to-end data engineering and applied AI, delivered with speed, quality and compliance.</p>
+        <p class="mt-3 text-slate-600 max-w-2xl mx-auto">End-to-end data engineering and applied AI — delivered with speed, quality and compliance.</p>
       </div>
       <div class="grid md:grid-cols-3 gap-6">
         <!-- Data Platforms -->
@@ -211,7 +215,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="text-center mb-8">
         <h2 class="text-3xl font-bold">Platforms & Tools</h2>
-        <p class="mt-2 text-slate-600">We meet you where you are and help you move forward.</p>
+        <p class="mt-2 text-slate-600">We meet you where you are — and help you move forward.</p>
       </div>
       <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-4">
         <div class="bg-white rounded-xl border border-slate-200 p-5">
@@ -260,7 +264,7 @@
       <div class="flex flex-col md:flex-row md:items-end md:justify-between gap-6 mb-8">
         <div>
           <h2 class="text-3xl font-bold">Live demo gallery</h2>
-          <p class="mt-2 text-slate-600">Show, don’t tell, a few prototypes we can tailor to your environment.</p>
+          <p class="mt-2 text-slate-600">Show, don’t tell — a few prototypes we can tailor to your environment.</p>
         </div>
         <div class="flex gap-3">
           <button class="btn btn-ghost" onclick="filterDemos('all')">All</button>
@@ -333,6 +337,94 @@
     </div>
   </section>
 
+  <!-- CAREERS -->
+  <section id="careers" class="section bg-white">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="text-center mb-10">
+        <h2 class="text-3xl font-bold">Careers at Morero</h2>
+        <p class="mt-3 text-slate-600 max-w-2xl mx-auto">
+          We’re hiring across data, AI, and operations. Explore current openings and apply via our Google Form.
+        </p>
+      </div>
+
+      <div class="grid md:grid-cols-2 gap-6">
+        <!-- Data Engineer Intern -->
+        <article class="bg-slate-50 rounded-2xl border border-slate-200 p-6">
+          <div class="flex items-center justify-between gap-4">
+            <h3 class="font-semibold text-lg">Data Engineer Intern</h3>
+            <span class="text-xs px-2 py-1 rounded-full bg-slate-200">Internship</span>
+          </div>
+          <p class="mt-2 text-sm text-slate-600">
+            Support ingestion, cleaning and pipeline work on Databricks/Azure/Snowflake. Basic SQL and Python required.
+          </p>
+          <ul class="mt-3 text-sm list-disc pl-5 space-y-1">
+            <li>Assist with data ingestion & validation</li>
+            <li>Help build ELT pipelines</li>
+            <li>Contribute basic SQL/Python tasks</li>
+          </ul>
+          <a href="https://forms.gle/QKdvpJ3joPbuUvoG6" target="_blank" class="mt-4 inline-flex btn btn-primary">Apply</a>
+        </article>
+
+        <!-- AI Engineer Intern -->
+        <article class="bg-slate-50 rounded-2xl border border-slate-200 p-6">
+          <div class="flex items-center justify-between gap-4">
+            <h3 class="font-semibold text-lg">AI Engineer Intern</h3>
+            <span class="text-xs px-2 py-1 rounded-full bg-slate-200">Internship</span>
+          </div>
+          <p class="mt-2 text-sm text-slate-600">
+            Prototype and test ML/LLM models; support data prep and experiment tracking.
+          </p>
+          <ul class="mt-3 text-sm list-disc pl-5 space-y-1">
+            <li>Assist with model training & fine-tuning</li>
+            <li>Work on NLP/CV or predictive tasks</li>
+            <li>Document experiments & results</li>
+          </ul>
+          <a href="https://forms.gle/QKdvpJ3joPbuUvoG6" target="_blank" class="mt-4 inline-flex btn btn-primary">Apply</a>
+        </article>
+
+        <!-- Data Engineer (Full-Time) -->
+        <article class="bg-slate-50 rounded-2xl border border-slate-200 p-6">
+          <div class="flex items-center justify-between gap-4">
+            <h3 class="font-semibold text-lg">Data Engineer</h3>
+            <span class="text-xs px-2 py-1 rounded-full bg-slate-200">Full-Time</span>
+          </div>
+          <p class="mt-2 text-sm text-slate-600">
+            Design and optimize ETL/ELT; integrate enterprise sources; enforce data quality & governance.
+          </p>
+          <ul class="mt-3 text-sm list-disc pl-5 space-y-1">
+            <li>Build scalable pipelines (Spark/Databricks/ADF)</li>
+            <li>Integrate SAP/CRM/External data → Delta/Snowflake</li>
+            <li>Optimize for cost & performance</li>
+          </ul>
+          <a href="https://forms.gle/QKdvpJ3joPbuUvoG6" target="_blank" class="mt-4 inline-flex btn btn-primary">Apply</a>
+        </article>
+
+        <!-- HR Admin Intern -->
+        <article class="bg-slate-50 rounded-2xl border border-slate-200 p-6">
+          <div class="flex items-center justify-between gap-4">
+            <h3 class="font-semibold text-lg">HR Admin Intern</h3>
+            <span class="text-xs px-2 py-1 rounded-full bg-slate-200">Internship</span>
+          </div>
+          <p class="mt-2 text-sm text-slate-600">
+            Support recruitment logistics, records, onboarding/offboarding, and internal communications.
+          </p>
+          <ul class="mt-3 text-sm list-disc pl-5 space-y-1">
+            <li>Screen CVs & schedule interviews</li>
+            <li>Maintain HR records</li>
+            <li>Assist with HR projects</li>
+          </ul>
+          <a href="https://forms.gle/QKdvpJ3joPbuUvoG6" target="_blank" class="mt-4 inline-flex btn btn-primary">Apply</a>
+        </article>
+      </div>
+
+      <div class="text-center mt-8">
+        <a href="https://forms.gle/QKdvpJ3joPbuUvoG6" target="_blank" class="btn btn-ghost">
+          Apply via Google Form
+        </a>
+      </div>
+    </div>
+  </section>
+
   <!-- ABOUT -->
   <section id="about" class="section bg-white">
     <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -349,11 +441,11 @@
           <div class="mt-6 grid sm:grid-cols-2 gap-4">
             <div class="rounded-2xl border border-slate-200 p-5">
               <h3 class="font-semibold">Mission</h3>
-              <p class="mt-2 text-sm text-slate-600">To empower organizations to leverage data and AI responsibly, driving measurable outcomes, stronger compliance, and sustainable growth.</p>
+              <p class="mt-2 text-sm text-slate-600">To empower organizations to leverage data and AI responsibly — driving measurable outcomes, stronger compliance, and sustainable growth.</p>
             </div>
             <div class="rounded-2xl border border-slate-200 p-5">
               <h3 class="font-semibold">Vision</h3>
-              <p class="mt-2 text-sm text-slate-600">To be Africa’s most trusted partner for practical, ethical intelligence, where purpose meets performance.</p>
+              <p class="mt-2 text-sm text-slate-600">To be Africa’s most trusted partner for practical, ethical intelligence — where purpose meets performance.</p>
             </div>
           </div>
         </div>
