--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <a href="#demos" class="hover:text-[var(--morero-blue)]">Live Demos</a>
           <a href="#careers" class="hover:text-[var(--morero-blue)]">Careers</a><!-- NEW -->
           <a href="#about" class="hover:text-[var(--morero-blue)]">About</a>
+          <a href="insights.html" class="hover:text-[var(--morero-blue)]">Insights</a>
           <a href="#contact" class="btn btn-primary">Talk to Us</a>
         </nav>
         <button id="menuBtn" class="md:hidden inline-flex items-center p-2 rounded btn-ghost" aria-label="Open menu">
@@ -63,6 +64,7 @@
         <a href="#demos" class="block">Live Demos</a>
         <a href="#careers" class="block">Careers</a><!-- NEW -->
         <a href="#about" class="block">About</a>
+        <a href="insights.html" class="block">Insights</a>
         <a href="#contact" class="btn btn-primary w-full justify-center">Talk to Us</a>
       </div>
     </div>
